# generic-arbitrary

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  generic-arbitrary.cabal  ghc-9.0.2.yaml  ghc-9.2.4.yaml  ghc-9.4.3.yaml  ghc-9.8.1.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
src/Test/QuickCheck/Arbitrary/: Generic.hs
src/Test/QuickCheck/Arbitrary/Generic/: TH.hs
test/: Aux.hs  Auxiliary.hs  EnumTest.hs  LimitationDemo.hs  NoTypecheckTest.hs  ParametersTest.hs  RecursiveTest.hs
